completed major styling, comp refactoring needed

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 
 .mainContent {
     background-color: #F1F2F6;
+    padding-bottom: 5rem;
 }
 
 .container {
@@ -44,6 +45,7 @@ header p {
     padding: 2rem 2.5rem;
     background-color: #fff;
     margin-bottom: 1.3rem;
+    border-radius: 5px;
 }
 
 .select h2 {
@@ -66,6 +68,7 @@ header p {
     padding: 2rem 2.5rem;
     margin-bottom: 1.3rem;
     background-color: #fff;
+    border-radius: 5px;
 }
 
 .info__logo {
@@ -145,13 +148,14 @@ select {
     padding: 2rem 2.5rem;
     margin-bottom: 1.3rem;
     background-color: #fff;
+    border-radius: 5px;
 }
 
 .cargo__header {
     display: flex;
     justify-content: space-between;
     align-items: top;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 
 .cargo__header .switch {
@@ -172,4 +176,83 @@ select {
 .cargo__header h2 {
     color: #2B2C2E;
     font-size: 1.4rem;
+}
+
+.cargo__button {
+    background-color: #F1F2F6;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 2px;
+    margin-bottom: 2rem;
+}
+
+.cargo__button button{
+    padding: .5rem 1rem;
+    background-color: #F1F2F6;
+    border: none;
+    color: #8e8f93;
+}
+
+.cargo__button button:hover {
+    color: #0548A1;
+    background-color: #fff;
+}
+
+.measurements {
+    font-size: .8rem;
+    color: #8e8f93;
+    display: flex;
+}
+
+.measurements__input-box {
+    position: relative;
+    margin-right: 1rem;
+}
+
+.measurements label {
+    display: inline;
+    background-color: #fff;
+    position: absolute;
+    left: 10px;
+    color: #2B2C2E;
+    font-weight: 500;
+}
+
+.measurements input {
+    padding-right:20px;
+    outline: none;
+    padding: .5rem 1rem;
+    border: 1px solid #dddddd;
+    margin-top: .5rem;
+    width: 10rem;
+}
+
+.measurements span {
+    margin-left: -34px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Additional Services Section */
+.additional {
+    width: 100%;
+    padding: 2rem 2.5rem 2.8rem 2.5rem;
+    margin-bottom: 1.3rem;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+.additional .flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.additional h2 {
+    color: #2B2C2E;
+    font-size: 1.4rem;
+    margin-bottom: 3.2rem;
 }
